@alexnaish fix issue with loading icon where it was taking space even when invisible

--- a/sass/modules/_loader.scss
+++ b/sass/modules/_loader.scss
@@ -1,5 +1,5 @@
 .loader {
-  display: block;
+  display: none;
   height: 80px;
   width: 80px;
   position: fixed;
@@ -50,6 +50,7 @@
   }
 
   &.visible {
+    display: block;
     .circle {
       opacity: 1;
       animation: bounce 250ms cubic-bezier(0.5, 1.25, 0.5, 1.25);
